--- a/digschol/index.qmd
+++ b/digschol/index.qmd
@@ -8,7 +8,7 @@ title: "Digital scholarship"
 
 
 :::{.callout-important}
-In the "Concepts and code" section, linked information includes a fuller narrative presentation of concepts. While these could be read sequentially like a book, I've chosen to present them together with documentation and tutorials using implementations of the concepts, because I don't belive that we can adequately assess or critique ideas about digital scholarship without running code.
+In the "Concepts and code" section, linked information includes fuller narrative presentations of concepts. While these sections could be read sequentially like a book, I've chosen to present them together with documentation and tutorials using implementations of the concepts, because I don't believe that we can adequately assess or critique ideas about digital scholarship without running code.
 
 All code in the linked sections is in [Julia](../julia/).
 :::
