--- a/digitexts/editions/markupreaders.qmd
+++ b/digitexts/editions/markupreaders.qmd
@@ -2,6 +2,14 @@
 title: "Citable markup"
 ---
 
+
+:::{.callout-caution}
+## Content incomplete
+
+This page will introduce making structured text sources citable.
+:::
+
+
 Make the contents of a structured text source accessible using canonical citation.
 
 See the [documentation of the `CitableTeiReaders` package](https://hcmid.github.io/CitableTeiReaders.jl/stable/).
