--- a/digitexts/orthography/index.qmd
+++ b/digitexts/orthography/index.qmd
@@ -2,6 +2,11 @@
 title: Orthography
 ---
 
+:::{.callout-caution}
+## Content incomplete
+
+This page will introduce digital encodings of orthographic systems.
+:::
 
 
 We can't read a text until we understand its writing system; we can't meaningfully work with a digital text until we understand how its writing system is encoded digitally.
