--- a/digitexts/parsing/index.qmd
+++ b/digitexts/parsing/index.qmd
@@ -2,7 +2,13 @@
 title: "Morphological parsing"
 ---
 
-Read more about Morphological parsing
+:::{.callout-caution}
+## Content incomplete
+
+This page will introduce a model and Julia interface for morphological parsing.
+:::
+
+
 
 And see some implementations:
 
