--- a/digitexts/parsing/kanones.qmd
+++ b/digitexts/parsing/kanones.qmd
@@ -2,5 +2,13 @@
 title: "Kanónes"
 ---
 
+
+:::{.callout-caution}
+## Content incomplete
+
+This page will introduce the Kanónes system for building Greek morphological parsers
+:::
+
+
 - implements the citable parser model
 - see the full site
