--- a/digitexts/parsing/tabulae.qmd
+++ b/digitexts/parsing/tabulae.qmd
@@ -2,5 +2,14 @@
 title: "Tabulae"
 ---
 
+
+
+:::{.callout-caution}
+## Content incomplete
+
+This page will introduce the Tabulae system for building Greek morphological parsers
+:::
+
+
 - implements the citable parser model
 - see the full site
