--- a/digitexts/physical/images.qmd
+++ b/digitexts/physical/images.qmd
@@ -2,4 +2,12 @@
 title: "Services for citable images"
 ---
 
+
+:::{.callout-caution}
+## Content incomplete
+
+This page will introduce working with services for citable images.
+:::
+
+
 - CitableImage.jl
