--- a/digitexts/physical/index.qmd
+++ b/digitexts/physical/index.qmd
@@ -3,5 +3,12 @@ title: "Digital scholarly editions"
 ---
 
 
+:::{.callout-caution}
+## Content incomplete
+
+This page will introduce a model of the relations of artifacts, images and texts.
+:::
+
+
 - images, physical artifacts, text content ("DSE triples")
 - how they're managed, served, sources
