--- a/utils/index.qmd
+++ b/utils/index.qmd
@@ -2,4 +2,12 @@
 title: "Some generic utilities"
 ---
 
+
+:::{.callout-caution}
+## Content incomplete
+
+This page will introduce generic utilities for sequence alignment.
+:::
+
+
 - VectorAlignments.jl
