--- a/digitexts/parsing/index.qmd
+++ b/digitexts/parsing/index.qmd
@@ -8,7 +8,7 @@ title: "Morphological parsing"
 This page will introduce a model and Julia interface for morphological parsing.
 :::
 
-
+See documentation for the [`CitableParserBuilder` package](https://neelsmith.github.io/CitableParserBuilder.jl/stable/)
 
 And see some implementations:
 
