--- a/hmt/index.qmd
+++ b/hmt/index.qmd
@@ -2,4 +2,12 @@
 title: "Homer Multitext project: overview"
 ---
 
+
+:::{.callout-caution}
+## Content incomplete
+
+This page will introduce digital work on the Homer Multitext project.
+:::
+
+
 Overview: TBA
