--- a/digschol/index.qmd
+++ b/digschol/index.qmd
@@ -3,9 +3,9 @@ title: "Digital scholarship"
 ---
 
 ::: callout-important
-In the "Concepts and code" section, linked information includes fuller narrative presentations of concepts. While these sections could be read sequentially like a book, I've chosen to present them together with documentation and tutorials using implementations of the concepts, because I don't believe that we can adequately assess or critique ideas about digital scholarship without running code.
+The topics in the "Concepts and code" section form a natural sequence, progressing from citation to successsive forms of textual manipulation and analysis. Linked information includes fuller narrative presentations of concepts that could be read sequentially like a book, but I've chosen to present them together with documentation and tutorials using implementations of the concepts, because I don't believe that we can adequately assess or critique ideas about digital scholarship without running code.
 
-All code in the linked sections is in [Julia](../julia/).
+All code in the linked sections is in written  [Julia](../julia/).
 :::
 
 ## Digital scholarship: concepts and code
