--- a/walkthrough/index.qmd
+++ b/walkthrough/index.qmd
@@ -114,7 +114,7 @@ ortho = simpleAscii()
 
 ### Create citable texts
 
-Read the XML source from a URL, and make the marked up content accessible through canonical citation with the `CitableTeiReaders` package.
+Read the XML source from a URL, and make the marked-up content accessible through canonical citation with the `CitableTeiReaders` package.
 
 ```{julia}
 #| output: false
@@ -123,7 +123,7 @@ engraving_url = "https://raw.githubusercontent.com/neelsmith/quart-home/main/wal
 engraving_corpus = readcitable(engraving_url, engraving_text, TEIAnonblock, UrlReader)
 ```
 
-Compose a univocal diplomatic edition from the multivalent XML document.
+Compose a univocal diplomatic edition from the multivalent XML document with the `EditionBuilders` package.
 
 ```{julia}
 #| output: false
@@ -135,13 +135,15 @@ engraving_dipl = edited(builder, engraving_corpus)
 ::: callout-tip
 ## Learn more about creating citable texts
 
--   [citable markup](../digitexts/editions/markupreaders.qmd)
--   [edition builders](../digitexts/editions/editionbuilders.qmd)
+-   [making markup citable](../digitexts/editions/markupreaders.qmd)
+-   [building univocal editions](../digitexts/editions/editionbuilders.qmd)
 :::
 
 ### A full digital scholarly edition
 
-### Collect relations of text, artifact and image
+#### Collect relations of text, image and artifact
+
+Read records relating text, image and artifact using the `CitablePhysicalText` package.
 
 ```{julia}
 #| output: false
@@ -151,18 +153,33 @@ triplesets = fromcex(delimited_url, DSECollection, UrlReader)
 ```
 
 ::: callout-tip
-## Learn more about [digital scholarly editions](../digitexts/physical/)
+## Learn more about [modelling physical texts](../digitexts/physical/). 
 :::
 
 #### Services for images
 
--   configure HMT image service
+Configure the Homer Mulitext project's image service using the `CitableImage` package.
+
+```{julia}
+#| output: false
+using CitableImage
+imgbaseurl = "http://www.homermultitext.org/iipsrv"
+imgroot = "/project/homer/pyramidal/deepzoom"
+imgservice = IIIFservice(imgbaseurl, imgroot)
+```
 
 ::: callout-tip
 ## Learn more about [citable image services](../cite/urns/imgs.qmd)
 :::
 
+
+
 ## Application: explore differences in the texts visually
+
+:::{.callout-warning}
+## TBA
+:::
+
 
 -   computationally identify sections where texts differ
 -   show image of section, linked to ICT
@@ -176,6 +193,10 @@ happiness_original = Cite2Urn("urn:cite2:citeusnatarch:declindep.v1:Declaration_
 ## Application: organize differences in the texts as a sequence alignment
 
 
+:::{.callout-warning}
+## TBA
+:::
+
 ```{julia}
 using VectorAlignments
 ```
@@ -185,3 +206,5 @@ using VectorAlignments
 ::: callout-tip
 ## Learn more about [sequence alignments](../utils/)
 :::
+
+## Works cited 
