Add citable corpora page

--- a/digitexts/editions/index.qmd
+++ b/digitexts/editions/index.qmd
@@ -5,7 +5,8 @@ title: "Building citable editions from structured text sources"
 :::{.callout-caution}
 ## Content incomplete
 
-This page will introduce turning structured text sources into citable digital editions.
+This page will introduce turning structured text sources into citable digital editions,
+and working with citable corpora.
 :::
 
 
@@ -15,3 +16,4 @@ Two abstractions developed at HC MID allow us to go from multivalent sources to 
 1. *make structured sources citable*: map structured sources to canonical CTS URNs.
 2. *edition builders*:  given a citable structured source, compose specified types of editions that can be computationally analyzed without any further structure than citation by URN.
 
+We can use a *citable corpus* together with an [orthography](../orthography/) for higher-order manipulation and analysis.
